--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <h1>Hello Extensions</h1>
-    <script src="script.js"></script>
   </body>
+  <script src="src/popup.js"></script>
 </html>
